--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dnd",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://joosep10.github.io/dnd",
+  "homepage": "https://joosep10.github.io/dnd",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -18,7 +18,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b main -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
